# Moorhen

./: -_DEFAULT_CONTOUR_LEVEL.html  .gitignore  .gitmodules  AUTHORS.md  CITATION.cff  CLEAN  CMakeLists.txt  COPYING  MoorhenCommandCentre.html  MoorhenMap.html  MoorhenMolecule.html  MoorhenPreferences.html  MoorhenTimeCapsule.html  README  README.md  TODO-side-on-view.md  TODO.md  TODO.txt  TODO_CLIP_FOG_BLUR.md  VERSIONS  VERSIONS.txt  components_MoorhenContainer.tsx.html  components_misc_MoorhenReduxProvider.tsx.html  components_modal_MoorhenDraggableModalBase.tsx.html  components_select_MoorhenMapSelect.tsx.html  components_select_MoorhenMoleculeSelect.tsx.html  components_sequence-viewer_MoorhenSequenceAlignment.tsx.html  components_sequence-viewer_MoorhenSequenceViewer.tsx.html  for_clement.diff  get_sources  get_sources_funs  global.html  index.html  initial_build.sh  moorhen.code-workspace  moorhen_build.sh  update_git_rev  utils_MoorhenCommandCentre.ts.html  utils_MoorhenContext.tsx.html  utils_MoorhenHistory.ts.html  (+6 more)
.docker/: DockerFile  Dockerfile  README.md
baby-gru/: .babelrc  .gitignore  .prettierignore  .prettierrc  Dockerfile  MoorhenKeyboardPress.ts  README.md  SimpleCrossOriginServer.py  babel.config.js  baby-gru  codegen.ts  compare_export.py  docker-compose.yml  docs.styles.css  eslint.config.mjs  index.html  jest.config.js  jsdoc.json  list_of_webgl_methods.txt  manifest.json  nodemon.json  package-lock.json  package.json  preview.dist.html  service-worker.js  setup-vscode-firefox.sh  tsconfig.json  tsconfig.worker.json  vite.WebC.config.mts  vite.config.mts  vite.pwa.config.mts  webcomponent.html  webpack.base.config.js  webpack.config.js  webpack.configReact.js  webpack.hooks.config.js  webpack.react.config.js  webpack.utils.config.js  webpack.webcomponent.config.js
blog/: Gemfile  _config.yml  (+1 more)
ccp4/: CMakeLists.txt  ccp4_errno.h  ccp4_fortran.h  ccp4_sysdep.h  cmtzlib.c  library_file.c  library_file.h  library_utils.c  pack_c.c  w32mvs.h
ccp4mg/: CMakeLists.txt
ccp4srs/: CMakeLists.txt  ccp4srs.pc  ccp4srs.pc.cmakein  ccp4srs.pc.in  config.h  config.h.cmakein  configure  srsgen.cpp
ccp4srs/.bzr/branch/: branch.conf  last-revision  tags
ccp4srs/.bzr/checkout/: dirstate  merge-hashes
ccp4srs/.bzr/repository/: pack-names
ccp4srs/ccp4srs/: ccp4srs_types.h
ccp4srs/m4/: libtool.m4
ccp4srs/windows/: dirent.cpp  dirent.h
clipper/: CMakeLists.txt
clipper/ccp4/: CMakeLists.txt
clipper/cif/: CMakeLists.txt
clipper/cns/: CMakeLists.txt
clipper/contrib/: CMakeLists.txt
clipper/core/: CMakeLists.txt  atomsf.cpp  clipper_message.h  clipper_sysdep.h  clipper_thread.h  clipper_util.h  container_types.h  coords.cpp  coords.h  fftmap.h  hkl_data.h  spacegroup.h  spacegroup_data.h  xmap.h
clipper/gemmi/: CMakeLists.txt
clipper/minimol/: CMakeLists.txt  minimol.h
clipper/mmdb/: CMakeLists.txt
clipper/phs/: CMakeLists.txt
conkit/: CMakeLists.txt
coot/: CMakeLists.txt  coot_env.js  coot_env_web.js  density_fit_analysis-test.cc  fix-nomenclature.cc  gemmi-wrappers.cc  glycoblocks.cc  moorhen-wrappers.cc  privateer-wrapper.cc  smilestopdb.cc  smilestopdb.h
example/: 2cco.cif  5a3h_sigmaa.mtz  CMakeLists.txt  dynamic_read_lib.cc  gemmi_test.cc  gemmi_test.js  low-res-emd-32143.map  sup_defs.h  sup_multiple.cpp  sup_multiple.h  sup_pairwise.cpp  sup_pairwise.h  superpose.cpp  superpose_node_main.cpp
fftw/: CMakeLists.txt  config.h
gemmi/: CMakeLists.txt
gesamt/: CMakeLists.txt
mmdb2/: CMakeLists.txt  mmdb_atom.cpp  mmdb_atom.h  mmdb_bondmngr.h  mmdb_chain.h  mmdb_cifdefs.h  mmdb_coormngr.h  mmdb_cryst.cpp  mmdb_cryst.h  mmdb_defs.h  mmdb_ficif.cpp  mmdb_ficif.h  mmdb_io_file.cpp  mmdb_io_file.h  mmdb_io_stream.h  mmdb_machine_.h  mmdb_manager.h  mmdb_mask.h  mmdb_math_.h  mmdb_math_align.h  mmdb_math_bfgsmin.h  mmdb_math_fft.h  mmdb_math_graph.h  mmdb_math_linalg.h  mmdb_mattype.h  mmdb_mmcif_.cpp  mmdb_mmcif_.h  mmdb_model.cpp  mmdb_model.h  mmdb_root.h  mmdb_rwbrook.cpp  mmdb_rwbrook.h  mmdb_selmngr.h  mmdb_seqsuperpose.h  mmdb_symop.h  mmdb_tables.h  mmdb_title.cpp  mmdb_title.h  mmdb_uddata.h  mmdb_utils.h  (+2 more)
privateer/: .bzrignore  CMakeLists.txt  Doxyfile  clipper-glyco.cpp  clipper-glyco.h  clipper-glyco_data.cpp  privateer-frontend_scripting.i  privateer-lib.cpp  privateer-lib.h  privateer-restraints.cpp  privateer-restraints.h  privateer.cpp
privateer/.bzr/branch/: branch.conf  last-revision
privateer/.bzr/checkout/: dirstate
privateer/.bzr/repository/: pack-names
privateer/privateer-devtools.xcworkspace/: contents.xcworkspacedata
privateer/privateer-devtools.xcworkspace/xcuserdata/jon.xcuserdatad/: UserInterfaceState.xcuserstate
privateer/unittests/test_data/: 3ay4.mtz
prosmart/: CMakeLists.txt
rfftw/: CMakeLists.txt
rvapi/: CMakeLists.txt
slicendice_cpp/: CMakeLists.txt
ssm/: CMakeLists.txt  ssm_align.cpp  ssm_align.h  ssm_csia.cpp  ssm_csia.h  ssm_defs.h  ssm_graph.cpp  ssm_graph.h  ssm_malign.cpp  ssm_malign.h  ssm_superpose.cpp  ssm_superpose.h  ssm_vxedge.cpp  ssm_vxedge.h
wasm_src/: CMakeLists.txt  README.md  coot_env_web.js  density_fit_analysis-test.cc  gemmi-cif-wrappers.cc  gemmi-data-wrappers.cc  gemmi-types-wrappers.cc  gemmi-wrappers-helpers.h  gemmi-wrappers.cc  glycoblocks.cc  moorhen-types-wrappers.cc  moorhen-wrappers-helpers.h  moorhen-wrappers.cc  moorhen.d.ts  privateer-wrappers.cc  privateer-wrappers.h  rotarama.hpp  small_molecule_to_cif.cc  smilestopdb.cc  smilestopdb.h  untar.c
wasm_src_frontend/: CMakeLists.txt  crystallography_worker.js  headers.cc  headers.h  mini_rsr_worker.js  monid_to_pdb_worker.js  nma_worker.js  superpose_worker.js  web_example.cc  worker_test.html
web_example/: CMakeLists.txt  RDKit_minimal.js  cif_pdb_worker.js  coot_example.cc  crystallography_worker.js  mini_rsr_worker.js  mtz_arraybuffer_worker.js  mtz_worker.js  nma_worker.js  pdb_worker.js  rdkit_example.html  smiles_to_pdb_worker.js  superpose_web.cpp  superpose_web_main.cpp  superpose_worker.js  test.html  web_example.cc  worker.js  worker_test.html
xpid_moorhen/: CMakeLists.txt
(+1336 files in other folders)
