cmake_minimum_required(VERSION 3.13)
project(ccp4_wasm)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

# SINGLE_THREADED option for Safari/iframe compatibility (no SharedArrayBuffer)
option(SINGLE_THREADED "Build without pthread support for Safari compatibility" OFF)

if(SINGLE_THREADED)
  set(CMAKE_CXX_FLAGS_RELEASE "-O2 -I${CMAKE_INSTALL_PREFIX}/include")
  message(STATUS "Building SINGLE-THREADED version (no pthreads)")
else()
  set(CMAKE_CXX_FLAGS_RELEASE "-O2 -I${CMAKE_INSTALL_PREFIX}/include -pthread")
endif()
set(CMAKE_C_FLAGS_RELEASE "-O2")
set(CMAKE_CXX_STANDARD 23)

link_directories(${CMAKE_INSTALL_PREFIX}/lib)
include_directories(${CMAKE_INSTALL_PREFIX}/include/rdkit)
if("${EMSCRIPTEN_VERSION}" VERSION_GREATER 3.1.26)
  if(SINGLE_THREADED)
    add_link_options(-sSTACK_SIZE=5MB)
  else()
    add_link_options(-sDEFAULT_PTHREAD_STACK_SIZE=2MB -sSTACK_SIZE=5MB)
  endif()
endif()

add_subdirectory(wasm_src)
